--- a/windows/PhotobookUI/PhotobookUI.vcxproj.filters
+++ b/windows/PhotobookUI/PhotobookUI.vcxproj.filters
@@ -6,7 +6,7 @@
   <ItemGroup>
     <Page Include="MainWindow.xaml" />
     <Page Include="TableContentPage.xaml" />
-    <Page Include="FirstPage.xaml" />
+    <Page Include="Dashboard.xaml" />
     <Page Include="ColorScheme.xaml" />
   </ItemGroup>
   <ItemGroup>
