--- a/windows/PhotobookUI/PhotobookUI.vcxproj
+++ b/windows/PhotobookUI/PhotobookUI.vcxproj
@@ -130,7 +130,7 @@
     <ClInclude Include="MainWindow.xaml.h">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </ClInclude>
-    <ClInclude Include="PhotoBookListener.h" />
+    <ClInclude Include="PhotobookTableListener.h" />
     <ClInclude Include="PopUps.h" />
     <ClInclude Include="ProjectItem.h" />
     <ClInclude Include="TableContentPage.xaml.h">
@@ -165,7 +165,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </ClCompile>
     <ClCompile Include="$(GeneratedFilesDir)module.g.cpp" />
-    <ClCompile Include="PhotoBookListener.cpp" />
+    <ClCompile Include="PhotobookTableListener.cpp" />
     <ClCompile Include="PopUps.cpp" />
     <ClCompile Include="ProjectItem.cpp" />
     <ClCompile Include="TableContentPage.xaml.cpp">
