--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -71,6 +71,7 @@ add_library(pblib STATIC
     include/pb/ImageReader.h
     include/pb/ImageOperations.h
     include/pb/ImageSetWriter.h
+    include/pb/Jpg.h
     include/pb/MetadataReader.h
     include/pb/FileComparator.h
     include/pb/Gallery.h
@@ -98,6 +99,7 @@ add_library(pblib STATIC
     src/ImageReader.cpp
     src/ImageOperations.cpp
     src/ImageSetWriter.cpp
+    src/Jpg.cpp
     src/Log.cpp
     src/MetadataReader.cpp
     src/Pdf.cpp
