--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -79,6 +79,7 @@ add_library(pblib STATIC
     include/pb/FileComparator.h
     include/pb/Gallery.h
     include/pb/util/Observable.h
+    include/pb/PaperSettings.h
     include/pb/Pdf.h
     include/pb/persistence/Persistence.h
     include/pb/persistence/ProjectDetails.h
