--- a/windows/PhotobookUI/PhotobookUI.vcxproj.filters
+++ b/windows/PhotobookUI/PhotobookUI.vcxproj.filters
@@ -64,6 +64,9 @@
     <Image Include="Assets\coffee-cup.png">
       <Filter>Assets</Filter>
     </Image>
+    <Image Include="Assets\delete-circle.png">
+      <Filter>Assets</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
