--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -12,6 +12,7 @@ if (WIN32)
     add_compile_options(/W4)
     add_compile_options(/wd4626)
     add_compile_options(/wd5027)
+    add_compile_definitions(NOMINMAX)
 else()
     set(CMAKE_CXX_FLAGS "-std=c++20")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
@@ -53,8 +54,7 @@ find_package(unofficial-libharu CONFIG REQUIRED)
 find_package(unofficial-sqlite3 CONFIG REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 
-add_subdirectory(third-party/podofo)
-
+include_directories(third-party/podofo-build/include)
 include(third-party/windows/pdfium/PDFiumConfig.cmake)
 
 include_directories(${CMAKE_BINARY_DIR})
