--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,12 @@ project(PhotoBook)
 if (MSVC)
     add_compile_options(/std:c++20)
     add_compile_options(/EHsc)
+    add_compile_definitions(NOMINMAX)
 else()
     set(CMAKE_CXX_FLAGS "-std=c++20")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 endif()
+include_directories(PB/third-party/podofo-build/include)
 
 add_subdirectory(PB)
 
