--- a/PB/Config.h.in
+++ b/PB/Config.h.in
@@ -44,9 +44,22 @@ public:
 
   static constexpr const char *VERSION = "0.1.0";
 
-  static constexpr PaperSettings A4_PAPER = {PaperType::A4, 300, 3508, 2480};
-  static constexpr PaperSettings A5_PAPER = {PaperType::A5, 300, 2480, 1748};
-  static constexpr PaperSettings A3_PAPER = {PaperType::A3, 300, 4961, 3508};
+  static constexpr PaperSettings A4_LANDSCAPE_PAPER = {PaperType::A4_Landscape,
+                                                       72, 842, 595};
+  static constexpr PaperSettings A5_LANDSCAPE_PAPER = {PaperType::A5_Landscape,
+                                                       72, 595, 421};
+  static constexpr PaperSettings A3_LANDSCAPE_PAPER = {PaperType::A3_Landscape,
+                                                       72, 1190, 842};
+
+  static constexpr PaperSettings A4_PORTRAIT_PAPER = {PaperType::A4_Portrait,
+                                                      72, 595, 842};
+  static constexpr PaperSettings A5_PORTRAIT_PAPER = {PaperType::A5_Portrait,
+                                                      72, 421, 595};
+  static constexpr PaperSettings A3_PORTRAIT_PAPER = {PaperType::A3_Portrait,
+                                                      72, 842, 1190};
+
+  static constexpr int MIN_PAPER_WIDTH = 200;
+  static constexpr int MIN_PAPER_HEIGHT = 200;
 
   Log const &printer() { return mLogPrinter; }
 
