--- a/PB/Config.h.in
+++ b/PB/Config.h.in
@@ -1,12 +1,12 @@
 #pragma once
 #include <stop_token>
 
-#include <pb/common/Log.h>
+#include <pb/config/Log.h>
 #include <pb/util/Timer.h>
 #include <pb/PaperSettings.h>
 
-#if __has_include(<pb/common/@PRINTER_TYPE@.h>)
-#include <pb/common/@PRINTER_TYPE@.h>
+#if __has_include(<pb/config/@PRINTER_TYPE@.h>)
+#include <pb/config/@PRINTER_TYPE@.h>
 #else
 #warning "@PRINTER_TYPE@ doesn't exist"
 #endif
