dev: Add conflict handling for `PathCache`.

--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -182,6 +182,7 @@ if (LOG_LEVEL MATCHES Debug)
         tests/TestFolderImport.cpp
         tests/TestImageMonitor.cpp
         tests/TestParallelTaskConsumer.cpp
+        tests/TestPathCache.cpp
         tests/TestPhotobook.cpp
         tests/TestProjectPersistence.cpp
         tests/TestSequenctialTaskConsumer.cpp
