dev: Github Actions Test.(4)

--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -80,3 +80,12 @@ jobs:
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /property:Platform=x64 ${{env.SOLUTION_FILE_PATH}}
+
+    - name: Generate test data
+      run: python PB\test-data\generate-data.py PB\test-data
+
+    - name: Test
+      working-directory: ${{ github.workspace }}\PB\build\Release
+      # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
+      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+      run: ctest --build-config ${{ matrix.build_type }}
